add path sum calories of listed ingredients
